--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,11 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "outputPath": {
+                "base": "docs/",
+                "browser": ""
+              }
             },
             "development": {
               "optimization": false,
@@ -62,7 +66,6 @@
           "configurations": {
             "production": {
               "buildTarget": "portfolio:build:production"
-            },
             "development": {
               "buildTarget": "portfolio:build:development"
             }
